# app/Http/Controllers/Api/UserController.php
@@ -11,22 +11,44 @@ class UserController extends Controller
     public function __construct(){
         $this->middleware('auth:api')->except(['index']);
     }
-
-    /**
-    * @OA\Get(
-    *     path="/api/users",
-    *     summary="Mostrar usuarios",
-    *     @OA\Response(
-    *         response=200,
-    *         description="Mostrar todos los usuarios."
-    *     ),
-    *     @OA\Response(
-    *         response="default",
-    *         description="Ha ocurrido un error."
-    *     )
-    * )
-    */
     
+    /**
+     * @OA\Get(
+     *     path="/api/users",
+     *     tags={"user"},
+     *     summary="Return list all users",
+     *     description="Returns an array with all the users",
+     *     @OA\Response(
+     *         response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              @OA\AdditionalProperties(
+     *                  type="integer",
+     *                  format="int32"
+     *              )
+     *          )
+     *     ),
+     *     @OA\Parameter(
+     *         name="status",
+     *         in="query",
+     *         description="Status values that needed to be considered for filter",
+     *         required=true,
+     *         explode=true,
+     *         @OA\Schema(
+     *             type="array",
+     *             default="available",
+     *             @OA\Items(
+     *                 type="string",
+     *                 enum = {"available", "pending", "sold"},
+     *             )
+     *         )
+     *     ),
+     *     security={
+     *         {"api_key": {}}
+     *     }
+     * )
+    */
+
     public function index()
     {
         return \App\User::all();
